@@ -252,7 +252,6 @@ typedef struct
     int banked_overhead;
     /** 0 if sp points to last item pushed, 1 if sp points to next location to use */
     int offset;
-
   }
   stack;
 
